--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,8 +1,3 @@
-<!-- <ion-header>
-  <ion-toolbar>
-    <ion-title>Login</ion-title>
-  </ion-toolbar>
-</ion-header> -->
 
 <ion-content padding>
 	<ion-list>
@@ -19,7 +14,7 @@
 	</ion-list>
 
 	<div class="spacer" style="height: 10px;"></div>
-	<ion-button fill="solid" expand="block" color="dark" (click)="login()">Login</ion-button>
+	<ion-button fill="solid" expand="block" color="dark" (click)="signin()">Login</ion-button>
 	<div class="spacer" style="height: 10px;"></div>
 
 	<ion-grid>
