--- a/src/app/pages/groups/groups.page.html
+++ b/src/app/pages/groups/groups.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Friends</ion-title>
+    <ion-title>Groups</ion-title>
   </ion-toolbar>
 
     <ion-buttons slot="end">
