--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -12,7 +12,7 @@
 
 		<ion-tab-button tab="groups">
 			<ion-icon name="contacts"></ion-icon>
-			<ion-label>Friends</ion-label>
+			<ion-label>Groups</ion-label>
 		</ion-tab-button>
 	</ion-tab-bar>
 </ion-tabs>
