--- a/src/app/pages/buddychat/buddychat.page.html
+++ b/src/app/pages/buddychat/buddychat.page.html
@@ -3,38 +3,56 @@
       <ion-buttons slot="start">
           <ion-back-button defaultHref="tabs"></ion-back-button>
         </ion-buttons>
-    <ion-title>{{buddy.displayName}}</ion-title>
+    <ion-title *ngIf = "buddy != undefined">{{buddy.displayName}}</ion-title>
     <ion-buttons slot="end">
-        <button ion-button (click)="sendPicMsg()">
-        <ion-icon name="camera"></ion-icon>
+        <button ion-button (click)="selectLanguage()">
+        <ion-icon name="menu"></ion-icon>
         </button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content #content>
-    <div class = "chatwindow" style="display:flex">
-      <ion-list lines = "none">
-        <ion-item *ngFor = "let item of allmessages; let i = index" text-wrap>
-          <ion-avatar  slot="start" *ngIf="item.sentby === buddy.uid">
-            <img src="{{buddy.photoURL}}">
-          </ion-avatar>
-          <div class="bubble buddy" *ngIf="item.sentby === buddy.uid" style="flex:left">
-            <h3>{{item.message}}</h3>
-          </div>
+  <div class = "chatwindow">
+    <ion-list lines = "none">
+      <ion-item *ngFor = "let item of allmessages; let i = index" style = "margin:0;" text-wrap>
+          <ion-grid *ngIf="item.sentby === buddy.uid">
+              <ion-row>
+                <ion-col  size="2">                 
+                    <img  src="{{buddy.photoURL}}" style="float:left; margin-left: 0; padding-left: 0;">
+                </ion-col>
+                <ion-col  size="10">
+                    <div class="bubble me">
+                        <ion-label color="primary">{{item.message}}</ion-label>
+                        <br>
+                        <hr>
+                        <ion-label color="secondary">{{item.translation}}</ion-label>
+                      </div>              
+                </ion-col>
+              </ion-row>
+          </ion-grid>
 
-          <div class="bubble me" *ngIf="item.sentby != buddy.uid" style="flex:right">
-            <h3>{{item.message}}</h3>
-            <hr>
-            <h3>Translated</h3>
-          </div>
-          <ion-avatar  slot="end" *ngIf="item.sentby != buddy.uid">
-              <img src="{{photoURL}}">
-            </ion-avatar>
-        </ion-item>
-      </ion-list>
-    </div>
-    </ion-content>
+          <ion-grid *ngIf="item.sentby != buddy.uid">
+              <ion-row>
+                <ion-col  size="10">                 
+                    <div class="bubble you" >
+                        <ion-label color="primary">{{item.message}}</ion-label>
+                        <hr>
+                        <ion-label color="secondary">{{item.translation}}</ion-label>
+                      </div> 
+                </ion-col>
+
+                <ion-col  size="2">
+                    <img src="{{photoURL}}" >
+                </ion-col>
+              </ion-row>
+          </ion-grid>
+
+      </ion-item>
+    </ion-list>
+  </div>
+  </ion-content>
+
     <ion-footer ion-fixed>    
       <ion-toolbar class="no-border" color="white">        
         <ion-input [(ngModel)]="newmessage" placeholder="Write your message ..."></ion-input>  
