--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -52,12 +52,12 @@
   --ion-color-danger-tint: #f25454;
 
   /** dark **/
-  --ion-color-dark: #222428;
-  --ion-color-dark-rgb: 34, 34, 34;
-  --ion-color-dark-contrast: #ffffff;
-  --ion-color-dark-contrast-rgb: 255, 255, 255;
-  --ion-color-dark-shade: #1e2023;
-  --ion-color-dark-tint: #383a3e;
+  --ion-color-dark: #c0c0c0; 
+  --ion-color-dark-rgb: 192,192,192; 
+  --ion-color-dark-contrast: #000000; 
+  --ion-color-dark-contrast-rgb: 0,0,0; 
+  --ion-color-dark-shade: #a9a9a9; 
+  --ion-color-dark-tint: #c6c6c6;
 
   /** medium **/
   --ion-color-medium: #989aa2;
