--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -4,43 +4,23 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content *ngIf ="displayName">
-  <div id="profile-info" >
-      <div class="profile-image"><ion-img src="{{avatar}}" width="100" height="100"></ion-img></div>
-
-      <div class="spacer" style="height: 5px;"></div>
-      <ion-grid>
-        <ion-row>
-          <ion-col size="4">
-            Username: 
-          </ion-col>
-          <ion-col size="8">
-            {{ displayName }}
-          </ion-col>
-        </ion-row>
-        <div class="spacer" style="height: 10px;"></div>
-
-        <ion-row>
-          <ion-col size="4">
-            Email: 
-          </ion-col>
-          <ion-col size="8">
-            {{ email }}
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-
-      <!-- Edit details button -->
-      <div class="spacer" style="height: 10px;"></div>
-      <div>
-        <ion-button shape="round" color="primary">Edit Profile</ion-button>
-      </div>
-
-      <!-- Sign out button -->
-      <div class="spacer" style="height: 10px;"></div>
-      <div>
-          <ion-button shape="round" color="danger">Sign Out</ion-button>
-      </div>
+<ion-content>
+  <div class="spacer" style="height: 15px;"></div>
+  <div class="main-container">
+    <div class="spacer" style="height: 10px;"></div>
+    <div class="profile-image" (click)="editimage()">
+      <input type="file">
+      <img src="{{avatar}}">
     </div>
-  
+    <div class="center-content">
+      <h2 (click)="editname()">{{displayName}}</h2>
+    </div>
+    <div class="center-content">
+      Tap on your picture or name to edit.
+    </div>
+    <div class="spacer" style="height: 10px;"></div>
+    <div class="center-content">
+      <ion-button shape="round" color="danger" (click)="logout()">Sign Out</ion-button>
+    </div>
+  </div>
 </ion-content>
