--- a/src/app/pages/profile/profile.page.scss
+++ b/src/app/pages/profile/profile.page.scss
@@ -1,51 +1,26 @@
-.profile-image{
-    img{
-        height: 200px;
-        width: 200px;
-        border-radius:50%;
-        border: 4px solid rgba(255,255,255,0.4);
-        -webkit-box-shadow: 0px 0px 142px -37px rgba(0,0,0,0.75);
-        -moz-box-shadow: 0px 0px 142px -37px rgba(0,0,0,0.75);
-        box-shadow: 0px 0px 142px -37px rgba(0,0,0,0.75);
-    }
+img{
+    width: 50%;
+    height: 50%;
+    border-radius:50%;
+    border: 4px solid rgba(255,255,255,0.4);
+    -webkit-box-shadow: 0px 0px 142px -37px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 142px -37px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 142px -37px rgba(0,0,0,0.75);
 }
-.scroll-content {
-    align-content: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+
+.profile-image{
+    margin: auto;
     text-align: center;
 }
 
-#images {
-	display: flex;
-	flex-wrap: wrap;
-	margin: 0 auto;
-	max-width: 100%;
-	width: 606px;
+.main-container{
+    margin: auto;
+    width: 90%;
+    border: 3px solid green;
+    padding: 10px;
+    // background: red;
 }
 
-.image {
-	margin-left: 1px;
-	margin-right: 1px;
+.center-content{
+    text-align: center;
 }
-
-.main-image, .user-image {
-	width: 200px;
-	height: 200px;
-}
-
-
-// div {
-// 	width: 100px;
-// 	height: 100px;
-// 	background-color: red;
-	
-// 	position: absolute;
-// 	top:0;
-// 	bottom: 0;
-// 	left: 0;
-// 	right: 0;
-  	
-// 	margin: auto;
-// }
