--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -1,5 +1,5 @@
 <ion-tabs #tabs>
-	<ion-tab-bar slot="bottom">
+	<ion-tab-bar slot="bottom" color="dark">
 		<ion-tab-button tab="profile">
 			<ion-icon name="contact"></ion-icon>
 			<ion-label>Profile</ion-label>
@@ -11,8 +11,9 @@
 		</ion-tab-button>
 
 		<ion-tab-button tab="groups">
-			<ion-icon name="contacts"></ion-icon>
-			<ion-label>Groups</ion-label>
+			<!-- <ion-icon name="contacts"></ion-icon> -->
+			<ion-icon name="settings"></ion-icon>
+			<ion-label>Settings</ion-label>
 		</ion-tab-button>
 	</ion-tab-bar>
 </ion-tabs>
