style password reset page

--- a/src/app/pages/groups/groups.page.html
+++ b/src/app/pages/groups/groups.page.html
@@ -1,14 +1,7 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="dark">
     <ion-title>Settings</ion-title>
   </ion-toolbar>
-<!-- 
-    <ion-buttons slot="end">
-    <ion-button>
-      <ion-icon slot="icon-only" name="person-add"></ion-icon>
-    </ion-button>
-
-  </ion-buttons> -->
 
 </ion-header>
 
