--- a/src/app/pages/passwordreset/passwordreset.page.html
+++ b/src/app/pages/passwordreset/passwordreset.page.html
@@ -1,7 +1,5 @@
-<ion-header>
-    <!-- <ion-toolbar>
-      <ion-title>Reset Password</ion-title>
-    </ion-toolbar> -->
+<!-- <ion-header>
+
 </ion-header>
   
   <ion-content padding>
@@ -18,5 +16,54 @@
   
     <div><a (click) = "backToLogin()"> <ion-icon name="arrow-round-back"></ion-icon>Back to Login </a></div>
 
-  </ion-content>
+  </ion-content> -->
   
+  <ion-content padding class="animated fadeIn login auth-page">
+    <div class="theme-bg"></div>
+    <div class="auth-content">
+    
+      <!-- Logo -->
+      <div padding-horizontal text-center class="animated fadeInDown">
+        <div class="logo"></div>
+        <h4 no-margin>
+          <ion-text color="light" class="fw700">
+          Mono-VW
+          </ion-text>
+        </h4>
+      </div>
+
+      <h2><ion-text  color="light">Recover your password</ion-text></h2>
+      <p><ion-text color="light">Please enter your email address and we'll send you an email to reset your password.</ion-text></p>
+      <!-- Login form -->
+      <form [formGroup]="passwordResetForm" class="list-form">
+      <ion-item no-padding class="animated fadeInUp">
+        <ion-label position="floating">
+        <ion-icon name="mail" item-start></ion-icon>
+        Email
+        </ion-label>
+        <ion-input color="secondary" type="email" formControlName="email"></ion-input>
+      </ion-item>
+      <p ion-text class="text08" *ngIf="passwordResetForm.get('email').touched && passwordResetForm.get('email').hasError('required')">
+        <ion-text color="warning">
+        Required Field
+        </ion-text>
+      </p>
+      </form>
+    
+      <div>
+      <ion-button icon-left size="medium" expand="full" shape="round" color="dark" (click)="changeMyPassword()" [disabled]="!passwordResetForm.valid" tappable>
+        Reset Password
+      </ion-button>
+      </div>
+    
+      <!-- Other links -->
+      <div text-center margin-top>
+      <span (click)="backToLogin()" class="paz" tappable>
+        <ion-text color="light">
+          <ion-icon name="arrow-round-back"></ion-icon><strong>Back to login page</strong>
+        </ion-text>
+      </span>
+      </div>
+    
+    </div>
+    </ion-content>
