--- a/src/app/pages/buddychat/buddychat.page.html
+++ b/src/app/pages/buddychat/buddychat.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="dark">
       <ion-buttons slot="start">
           <ion-back-button defaultHref="tabs"></ion-back-button>
         </ion-buttons>
@@ -14,10 +14,10 @@
 
 <ion-content #content>
   <div class = "chatwindow">
-    <ion-list lines = "none">
+    <ion-list lines = "none" >
       <ion-item *ngFor = "let item of allmessages; let i = index" style = "margin:0;" text-wrap>
           <ion-grid *ngIf="item.sentby === buddy.uid">
-              <ion-row>
+              <ion-row >
                 <ion-col  size="2">                 
                     <img  src="{{buddy.photoURL}}" style="float:left; margin-left: 0; padding-left: 0;">
                 </ion-col>
@@ -58,7 +58,7 @@
         <ion-input [(ngModel)]="newmessage" placeholder="Write your message ..."></ion-input>  
         <ion-buttons slot="end">
           <ion-button  (click)="addmessage()">
-            <ion-icon name="send" color="primary" ></ion-icon>
+            <ion-icon name="send"></ion-icon>
           </ion-button>
         </ion-buttons>
       </ion-toolbar>    
