--- a/src/app/pages/chats/chats.page.html
+++ b/src/app/pages/chats/chats.page.html
@@ -1,5 +1,5 @@
-<ion-header>
-  <ion-toolbar>
+<ion-header >
+  <ion-toolbar color="dark">
     <!-- <ion-buttons slot="start">
     <ion-button>
       <ion-icon slot="icon-only" name="contact"></ion-icon>
@@ -17,31 +17,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
-  <!-- <ion-list no-lines>
-    <ion-list-header>
-      Requests
-    </ion-list-header>
-    <ion-item-sliding *ngFor="let item of myrequests">
-      <ion-item>
-      <ion-avatar item-left>
-        <img src="{{item.photoURL}}">
-      </ion-avatar>
-      <h4>{{item.displayName}}</h4>
-      </ion-item>
-      <ion-item-options>
-        <button ion-button color="secondary" (click)="accept(item)">
-          <ion-icon name="checkmark"></ion-icon>
-          ADD
-        </button>
-        <button ion-button color="danger" (click)="ignore(item)">
-          <ion-icon name="trash"></ion-icon>
-          NOPE
-        </button>
-      </ion-item-options>
-    </ion-item-sliding>
-  </ion-list> -->
-
+<ion-content color="primary" padding>
   <ion-list no-lines >
       <ion-list-header>
           Requests
