--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,34 +1,94 @@
-
-<ion-content padding>
-	<ion-list>
-
-		<ion-item>
-		  <ion-label position="floating">Email</ion-label>
-		  <ion-input type="email" [(ngModel)]="email"></ion-input>
+<ion-content padding class="animated fadeIn login auth-page">
+	<div class="theme-bg"></div>
+	<div class="auth-content">
+  
+	  <!-- Logo -->
+	  <div padding-horizontal text-center class="animated fadeInDown">
+		<div class="logo"></div>
+		<h4 no-margin>
+		  <ion-text color="light" class="fw700">
+			Mono-VW
+		  </ion-text>
+		</h4>
+	  </div>
+  
+	  <!-- Login form -->
+	  <form [formGroup]="onLoginForm" class="list-form">
+		<ion-item no-padding class="animated fadeInUp">
+		  <ion-label position="floating">
+			<ion-icon name="mail" item-start></ion-icon>
+			Email
+		  </ion-label>
+		  <ion-input color="secondary" type="email" formControlName="email"></ion-input>
 		</ion-item>
-	  
-		<ion-item>
-		  <ion-label position="floating">Password</ion-label>
-		  <ion-input type="password" [(ngModel)]="password"></ion-input>
+		<p ion-text class="text08" *ngIf="onLoginForm.get('email').touched && onLoginForm.get('email').hasError('required')">
+		  <ion-text color="warning">
+			Required Field
+		  </ion-text>
+		</p>
+  
+		<ion-item no-padding class="animated fadeInUp">
+		  <ion-label position="floating">
+			<ion-icon name="lock" item-start></ion-icon>
+			Password
+		  </ion-label>
+		  <ion-input color="secondary" type="password" formControlName="password"></ion-input>
 		</ion-item>
-	</ion-list>
-
-	<div class="spacer" style="height: 10px;"></div>
-	<ion-button fill="solid" expand="block" color="dark" (click)="signin()">Login</ion-button>
-	<div class="spacer" style="height: 10px;"></div>
-
-	<ion-grid>
-		<ion-row>
-			<ion-col>
-				<div class="ion-text-start">
-					<a (click) = "toRegister()"> Register Now</a>
-				</div>
+		<p ion-text color="warning" class="text08" *ngIf="onLoginForm.get('password').touched && onLoginForm.get('password').hasError('required')">
+		  <ion-text color="warning">
+			Required Field
+		  </ion-text>
+		  </p>
+	  </form>
+  
+	  <p text-right tappable (click)="forgotPass()" class="paz">
+		<ion-text color="light">
+		  <strong>Forgot Pass?</strong>
+		</ion-text>
+	  </p>
+  
+	  <div>
+		<ion-button icon-left size="medium" expand="full" shape="round" color="dark" (click)="goToHome()" [disabled]="!onLoginForm.valid" tappable>
+		  <ion-icon name="log-in"></ion-icon>
+		  Signin
+		</ion-button>
+  
+		<p text-center>
+		  <ion-text color="light">
+			Or Signin with:
+		  </ion-text>
+		</p>
+  
+		<ion-grid class="btn-group">
+		  <ion-row>
+			<ion-col size="4">
+			  <ion-button shape="round" expand="full" color="secondary">
+				<ion-icon slot="icon-only" name="logo-facebook"></ion-icon>
+			  </ion-button>
 			</ion-col>
-			<ion-col>
-				<div class="ion-text-end">
-					<a (click)="passwordReset()">Forgot Password ?</a>
-				</div>
+			<ion-col size="4">
+			  <ion-button shape="round" expand="full" color="secondary">
+				<ion-icon slot="icon-only" name="logo-twitter"></ion-icon>
+			  </ion-button>
 			</ion-col>
-		</ion-row>
-	</ion-grid>
-</ion-content>
+			<ion-col size="4">
+			  <ion-button shape="round" expand="full" color="secondary">
+				<ion-icon slot="icon-only" name="logo-googleplus"></ion-icon>
+			  </ion-button>
+			</ion-col>
+		  </ion-row>
+		</ion-grid>
+  
+	  </div>
+  
+	  <!-- Other links -->
+	  <div text-center margin-top>
+		<span (click)="goToRegister()" class="paz" tappable>
+		  <ion-text color="light">
+			New here? <strong>Sign Up</strong>
+		  </ion-text>
+		</span>
+	  </div>
+  
+	</div>
+  </ion-content>
