--- a/src/app/pages/signup/signup.page.html
+++ b/src/app/pages/signup/signup.page.html
@@ -1,31 +1,22 @@
-<!-- <ion-header>
-	<ion-toolbar>
-	  <ion-title>Register</ion-title>
-	</ion-toolbar>
-  </ion-header>
-   -->
+<!-- 
   <ion-content padding>
 	  <ion-list>
 	
-			<!-- Username -->
 		  <ion-item>
 				<ion-label position="floating">Username</ion-label>
 				<ion-input type="text" [(ngModel)]="username"></ion-input>
       </ion-item>
 			
-			<!-- Email -->
       <ion-item>
         <ion-label position="floating">Email</ion-label>
         <ion-input type="email" [(ngModel)]="email"></ion-input>
       </ion-item>  
 
-			<!-- Password -->
 		  <ion-item>
 				<ion-label position="floating">Password</ion-label>
 				<ion-input type="password" [(ngModel)]="password"></ion-input>
 		  </ion-item>
 
-			<!-- Confrom password -->
 		  <ion-item>
 				<ion-label position="floating">Confirm Password</ion-label>
 				<ion-input type="password" [(ngModel)]="cpassword"></ion-input>
@@ -33,13 +24,112 @@
 		
 		</ion-list>
 	
-		<!-- Sing up button -->
 		<div class="spacer" style="height: 10px;"></div>
 		<ion-button fill="solid" expand="block" color="dark" (click)="register()">Signup</ion-button>
 
-		<!-- Login anchor -->
 		<div class="spacer" style="height: 10px;"></div>
 		<div class="ion-text-center">
 			<a (click)="toLogin()">Login to an existing account</a>
 		</div>
-  </ion-content>
+	</ion-content> -->
+	
+	<ion-content padding class="login auth-page">
+
+		<div class="auth-content">
+			<!-- Logo -->
+			<div padding-horizontal text-center>
+				<div class="logo"></div>
+				<h3 no-margin>
+					<ion-text color="light" class="fw700">
+						<ion-text color="secondary">Register</ion-text>
+					</ion-text>
+				</h3>
+			</div>
+	
+			<!-- Register form -->
+			<form [formGroup]="onRegisterForm" class="list-form">
+				<ion-item no-padding class="animated fadeInUp">
+					<ion-label position="floating">
+						<ion-icon name="person" item-start></ion-icon>
+						Name
+					</ion-label>
+					<ion-input color="secondary" type="text" formControlName="fullName"></ion-input>
+				</ion-item>
+				<p ion-text class="text08" *ngIf="onRegisterForm.get('fullName').touched && onRegisterForm.get('fullName').hasError('required')">
+					<ion-text color="warning">
+						This field is required
+					</ion-text>
+				</p>
+	
+				<ion-item no-padding class="animated fadeInUp">
+					<ion-label position="floating">
+						<ion-icon name="mail" item-start></ion-icon>
+						Email
+					</ion-label>
+					<ion-input color="secondary" type="email" formControlName="email"></ion-input>
+				</ion-item>
+				<p ion-text class="text08" *ngIf="onRegisterForm.get('email').touched && onRegisterForm.get('email').hasError('required')">
+					<ion-text color="warning">
+						This field is required
+					</ion-text>
+				</p>
+	
+				<ion-item no-padding class="animated fadeInUp">
+					<ion-label position="floating">
+						<ion-icon name="lock" item-start></ion-icon>
+						Password
+					</ion-label>
+					<ion-input color="secondary" type="password" formControlName="password"></ion-input>
+				</ion-item>
+				<p ion-text color="warning" class="text08" *ngIf="onRegisterForm.get('password').touched && onRegisterForm.get('password').hasError('required')">
+					<ion-text color="warning">
+						This field is required
+					</ion-text>
+				</p>
+			</form>
+	
+			<div margin-top>
+				<ion-button icon-left size="medium" expand="full" shape="round" color="dark" (click)="signUp()" [disabled]="!onRegisterForm.valid" tappable>
+					<ion-icon name="log-in"></ion-icon>
+					Sign Up
+				</ion-button>
+	
+				<p text-center>
+					<ion-text color="light">
+						Or Sign Up with:
+					</ion-text>
+				</p>
+	
+				<ion-grid class="btn-group">
+					<ion-row>
+					<ion-col size="4">
+						<ion-button shape="round" expand="full" color="secondary">
+						<ion-icon slot="icon-only" name="logo-facebook"></ion-icon>
+						</ion-button>
+					</ion-col>
+					<ion-col size="4">
+						<ion-button shape="round" expand="full" color="secondary">
+						<ion-icon slot="icon-only" name="logo-twitter"></ion-icon>
+						</ion-button>
+					</ion-col>
+					<ion-col size="4">
+						<ion-button shape="round" expand="full" color="secondary">
+						<ion-icon slot="icon-only" name="logo-googleplus"></ion-icon>
+						</ion-button>
+					</ion-col>
+					</ion-row>
+				</ion-grid>
+	
+			</div>
+	
+			<!-- Other links -->
+			<div text-center margin-top>
+				<span (click)="goToLogin()" tappable>
+					<ion-text color="light">
+						<strong>I have an account!</strong>
+					</ion-text>
+				</span>
+			</div>
+	
+		</div>
+	</ion-content>
