profile settings attempt

--- a/src/app/pages/signup/signup.page.html
+++ b/src/app/pages/signup/signup.page.html
@@ -37,14 +37,15 @@
 
 		<div class="auth-content">
 			<!-- Logo -->
-			<div padding-horizontal text-center>
-				<div class="logo"></div>
-				<h3 no-margin>
-					<ion-text color="light" class="fw700">
-						<ion-text color="secondary">Register</ion-text>
-					</ion-text>
-				</h3>
-			</div>
+	  <!-- Logo -->
+	  <div padding-horizontal text-center class="animated fadeInDown">
+			<div class="logo"></div>
+			<h4 no-margin>
+			  <ion-text color="light" class="fw700">
+				Mono-VW
+			  </ion-text>
+			</h4>
+		  </div>
 	
 			<!-- Register form -->
 			<form [formGroup]="onRegisterForm" class="list-form">
