--- a/src/app/pages/buddychat/buddychat.page.html
+++ b/src/app/pages/buddychat/buddychat.page.html
@@ -23,9 +23,7 @@
                 </ion-col>
                 <ion-col  size="10">
                     <div class="bubble me">
-                        <ion-label color="primary">{{item.message}}</ion-label>
-                        <br>
-                        <hr>
+                        <ion-label>{{item.message}}</ion-label>
                         <ion-label color="secondary">{{item.translation}}</ion-label>
                       </div>              
                 </ion-col>
@@ -36,9 +34,9 @@
               <ion-row>
                 <ion-col  size="10">                 
                     <div class="bubble you" >
-                        <ion-label color="primary">{{item.message}}</ion-label>
-                        <hr>
-                        <ion-label color="secondary">{{item.translation}}</ion-label>
+                        <ion-label>{{item.message}}</ion-label>
+                        <br>
+                        <ion-label *ngIf="enableTranslation" color="secondary">{{item.translation}}</ion-label>
                       </div> 
                 </ion-col>
 
