--- a/src/app/pages/groups/groups.page.html
+++ b/src/app/pages/groups/groups.page.html
@@ -23,4 +23,27 @@
         </ionic-selectable>
       </ion-item>
 
+      <ion-list no-border>
+          <ion-list-header>
+            <ion-text color="dark">
+              <h5>General</h5>
+            </ion-text>
+          </ion-list-header>
+          <ion-item>
+            <ion-icon name="settings" slot="start" color="dark"></ion-icon>
+            <ion-label color="dark">Translation language</ion-label>
+            <ion-select [(ngModel)]="lang" (ionChange)="changeSelectPreference($event, PREF_TRANSLATION_LANGUAGE)" >
+              <ion-select-option *ngFor="let language of languages" 
+              [value]="language.languageCode" color="dark"
+              >{{language.languageName}}</ion-select-option>
+            </ion-select>
+          </ion-item>
+          <ion-item>
+            <ion-icon name="person" slot="start" color="dark"></ion-icon>
+            <ion-label class="label" color="dark"> Enable translation </ion-label>
+            <ion-toggle [(ngModel)]="preferences[PREF_ENABLE_TRANSLATION]" 
+             (ionChange)='changeRadioPreference($event, PREF_ENABLE_TRANSLATION)'></ion-toggle>
+          </ion-item>
+        </ion-list>
+
 </ion-content>
