--- a/src/app/pages/passwordreset/passwordreset.page.html
+++ b/src/app/pages/passwordreset/passwordreset.page.html
@@ -1,23 +1,3 @@
-<!-- <ion-header>
-
-</ion-header>
-  
-  <ion-content padding>
-    <ion-list>
-      <ion-item>
-        <ion-label position="floating">Email</ion-label>
-        <ion-input type="email" [(ngModel)]="email"></ion-input>
-      </ion-item>
-    </ion-list>
-  
-    <div class="spacer" style="height: 10px;"></div>
-    <ion-button fill="solid" expand="block" color="dark" (click)="changeMyPassword()">Reset My Password</ion-button>
-    <div class="spacer" style="height: 10px;"></div>
-  
-    <div><a (click) = "backToLogin()"> <ion-icon name="arrow-round-back"></ion-icon>Back to Login </a></div>
-
-  </ion-content> -->
-  
   <ion-content padding class="animated fadeIn login auth-page">
     <div class="theme-bg"></div>
     <div class="auth-content">
@@ -32,8 +12,8 @@
         </h4>
       </div>
 
-      <h2><ion-text  color="light">Recover your password</ion-text></h2>
-      <p><ion-text color="light">Please enter your email address and we'll send you an email to reset your password.</ion-text></p>
+      <h2 style="text-align:center;"><ion-text  color="light" no-padding>Recover your password</ion-text></h2>
+      <p style="text-align:center;"><ion-text color="light" no-padding>Please enter your email address and we'll send you an email to reset your password.</ion-text></p>
       <!-- Login form -->
       <form [formGroup]="passwordResetForm" class="list-form">
       <ion-item no-padding class="animated fadeInUp">
