--- a/src/app/pages/profile/profile.page.scss
+++ b/src/app/pages/profile/profile.page.scss
@@ -16,7 +16,7 @@ img{
 .main-container{
     margin: auto;
     width: 90%;
-    border: 3px solid green;
+    border: 3px solid black;
     padding: 10px;
     // background: red;
 }
