--- a/src/global.scss
+++ b/src/global.scss
@@ -15,6 +15,10 @@ ion-item {
     --ion-item-background: transparent;
 }
 
+.alert-button-group{
+  background-color: var(--ion-color-dark);
+}
+
 // backgrounds //
 .bg-white {
   background-color: #fff;
