--- a/src/app/pages/buddychat/buddychat.page.html
+++ b/src/app/pages/buddychat/buddychat.page.html
@@ -5,7 +5,7 @@
         </ion-buttons>
     <ion-title *ngIf = "buddy != undefined">{{buddy.displayName}}</ion-title>
     <ion-buttons slot="end">
-        <button ion-button (click)="selectLanguage()">
+        <button ion-button >
         <ion-icon name="menu"></ion-icon>
         </button>
     </ion-buttons>
