--- a/src/app/pages/groups/groups.page.html
+++ b/src/app/pages/groups/groups.page.html
@@ -7,7 +7,7 @@
 
 <ion-content>
 
-    <ion-item>
+    <!-- <ion-item>
         <ion-label>Select target Language</ion-label>
         <ionic-selectable
           ionic-selectable-modal-can-clear
@@ -21,7 +21,7 @@
               <ion-icon name="close-circle" style="font-size: 24px;"></ion-icon>
           </ng-template>
         </ionic-selectable>
-      </ion-item>
+      </ion-item> -->
 
       <ion-list no-border>
           <ion-list-header>
